--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,12 @@
       <artifactId>spring-context-support</artifactId>
       <version>${spring.version}</version>
     </dependency>
- 
+     <dependency>
+ 	 <groupId>commons-pool</groupId>
+	  <artifactId>commons-pool</artifactId>
+	  <version>1.6</version>
+ 	 </dependency>
+  
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -128,6 +133,12 @@
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.2.2</version>
+      <exclusions>
+			<exclusion>
+				<groupId>commons-pool</groupId>
+				<artifactId>commons-pool</artifactId>
+			</exclusion>
+		</exclusions>
     </dependency>
     <!-- JSTL标签类 -->
     <dependency>
@@ -260,9 +271,15 @@
     </dependency>
    
 	<dependency>
-		<groupId>redis.clients</groupId>
-		<artifactId>jedis</artifactId>
-		<version>2.8.0</version>
+	    <groupId>redis.clients</groupId>
+	    <artifactId>jedis</artifactId>
+	    <version>2.9.0</version>
+	    <exclusions>
+			<exclusion>
+				<groupId>commons-pool2</groupId>
+				<artifactId>commons-pool2</artifactId>
+			</exclusion>
+		</exclusions>
 	</dependency>
     
   </dependencies>
